--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,21 +1,25 @@
 spring:
   application:
     name: Cealum博客
-
   thymeleaf:
     mode: HTML
-  profiles:
-    active: pro
   servlet:
     multipart:
       max-file-size: 10MB
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/blog?useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT%2B8&useSSL=false
+    username: root
+    password: 321
 server:
   servlet:
     context-path: /blog
 user.manAvatar: /images/boy.png
 user.womanAvatar: /images/girl.png
 blog.defaultPicture: /images/wel.jpg
-#打印sql语句
-mybatis-plus:
-  configuration:
-    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+logging:
+  level:
+    root: info
+    cn.qzjblog.blog: info
+  file:
+    name: /usr/local/tomcat/webapps/blog/log/blog.log
